--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -12,9 +12,8 @@ html(lang="en")
     link(rel="stylesheet", href="css/normalize.css")
     link(rel="stylesheet", href="css/styles.css")
     title Insure Landing Page
-  body 
+  body.body
     include ../layout/header
     main.main
-      img(src="assets/images/image-intro-desktop.jpg", alt="", srcset="assets/images/image-intro-mobile.jpg 2x")
       include ../layout/content
     include ../layout/footer
