--- a/src/views/layout/content.pug
+++ b/src/views/layout/content.pug
@@ -2,16 +2,19 @@
 
 include ../mixins/section
 
-article.article 
-  h2.article__title.article__title--light humanizing<br>your insurance.
+article.article.text--light.big-margin
+  img.article__img-intro(src="assets/images/image-intro-desktop.jpg", alt="", srcset="assets/images/image-intro-mobile.jpg 1.5x")
+  h2.article__title Humanizing<br>your insurance.
   p.article__paragraph Get your life insurance coverage easier and faster. We blend our expertise and technology to help your find the plan that's right for you. Ensure you and your loved ones are protected.
-  a.article__link(href="http://#" aria-label="view our diferents plans") view plans 
+  a.article__link(href="#" aria-label="view our diferents plans") view plans
+  img.article__bg-left(src="assets/images/bg-pattern-intro-left-desktop.svg", alt="", srcset="assets/images/bg-pattern-intro-left-mobile.svg 1.5x")
+  img.article__bg-right(src="assets/images/bg-pattern-intro-right-desktop.svg", alt="", srcset="assets/images/bg-pattern-intro-right-mobile.svg 1.5x") 
 
 article.article
   h2.article__title We're different
   .sections-container
     each section in sections
       +section(section)
-
-p.paragraph Find out more<br>about how we work 
-  a.link(href="http://#" aria-label="visit how ve work section") how we work 
+.about.text--light
+  p.about__paragraph Find out more<br>about how we work 
+  a.about__link(href="#" aria-label="visit how ve work section") How we work 
