--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -38,6 +38,14 @@ font-family: 'Karla', sans-serif; */
 .text--light {
   color: var(--Very-Light-Gray);
   background-color: var(--Dark-Violet);
+
+  &::before {
+    display: none;
+
+    @media screen and (min-width: 1280px) {
+      display: block;
+    }
+  }
 }
 
 .menu__link,
