--- a/src/sass/layout/footer.scss
+++ b/src/sass/layout/footer.scss
@@ -7,6 +7,12 @@
   background-position: top left;
   background-size: contain;
 
+  @media screen and (min-width: 1280px) {
+    padding-top: 4.3rem;
+    background-image: url("../assets/images/bg-pattern-footer-desktop.svg");
+    background-size: auto;
+  }
+
   &__socialnav {
     position: relative;
     display: flex;
@@ -19,22 +25,24 @@
     padding-bottom: 2.3rem;
     margin-bottom: 2.3rem;
 
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 2.7rem;
+    }
+
     &::after {
       content: "";
       position: absolute;
       width: 100%;
       height: 0;
-      bottom: 0;
+      bottom: 5px;
 
       border-bottom: 1px solid var(--Dark-Grayish-Violet);
     }
-  }
 
-  &__nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    @media screen and (min-width: 1280px) {
+      flex-direction: row;
+      justify-content: space-between;
+    }
   }
 }
 
@@ -52,7 +60,22 @@
 
   text-align: center;
 
+  @media screen and (min-width: 1280px) {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 7.5rem;
+
+    width: 86%;
+    max-width: 1100px;
+    margin-inline: auto;
+
+    text-align: left;
+  }
+
   &__item {
+    width: 10rem;
+
     font-size: 0.9rem;
     text-transform: uppercase;
     letter-spacing: 0.1rem;
@@ -71,6 +94,10 @@
   gap: 1rem;
   margin-top: 2.25rem;
   margin-bottom: 2.25rem;
+
+  @media screen and (min-width: 1280px) {
+    align-items: flex-start;
+  }
 
   &__link {
     color: var(--Very-Dark-Violet);
