--- a/src/sass/layout/main.scss
+++ b/src/sass/layout/main.scss
@@ -1,23 +1,44 @@
+$margin-left: 11vw;
 @use "../components/buttonlink";
 
 .article {
   position: relative;
-  padding-top: 0.01px;
-  padding-bottom: 3.4rem;
+  padding-top: 0.1px;
+  padding-bottom: clamp(3.4rem, 10vw, 5.7rem);
   margin-bottom: clamp(2rem, 10vw, 3.2rem);
-  z-index: -1;
 
   text-align: center;
 
+  @media screen and (min-width: 1280px) {
+    padding-top: 4rem;
+
+    text-align: left;
+  }
+
+  &__img-intro {
+    display: block;
+    width: 100%;
+
+    @media screen and (min-width: 1280px) {
+      position: absolute;
+      top: 104px;
+      left: 51vw;
+      width: 540px;
+    }
+  }
+
   &__title {
-    margin-top: 6rem;
-    margin-bottom: 1rem;
-    margin-inline: auto;
+    margin-top: 6.5rem;
+    margin-bottom: 0.38em;
 
     font-family: "DM Serif Display", serif;
     font-weight: 400;
-    font-size: clamp(2rem, 12.2vw, 4.2rem);
-    line-height: 1;
+    font-size: clamp(2rem, 12.2vw, 4.5rem);
+    line-height: 0.9;
+
+    @media screen and (min-width: 1280px) {
+      margin-left: $margin-left;
+    }
   }
 
   &__paragraph {
@@ -25,18 +46,28 @@
     margin-bottom: 1.8rem;
     margin-inline: auto;
     width: 86%;
-    max-width: 600px;
+    max-width: 500px;
 
-    line-height: 1.8;
+    line-height: 1.7;
+
+    @media screen and (min-width: 1280px) {
+      margin-left: $margin-left;
+      max-width: 540px;
+    }
   }
 
   &__link {
     @include buttonlink.buttonlink;
-  }
 
-  &__img-intro {
-    display: block;
-    width: 100%;
+    @media screen and (min-width: 1280px) {
+      margin-left: $margin-left;
+
+      &:hover {
+        color: var(--Dark-Grayish-Violet);
+        background-color: white;
+        cursor: pointer;
+      }
+    }
   }
 
   &__bg-left,
@@ -48,12 +79,44 @@
     left: 0;
     top: 120.3vw;
     width: 160px;
+
+    @media screen and (min-width: 1280px) {
+      top: 428px;
+      width: 195px;
+    }
   }
 
   &__bg-right {
     right: 0;
     bottom: -178px;
     width: 124px;
+
+    @media screen and (min-width: 1280px) {
+      top: 0;
+      width: 436px;
+
+      object-position: 0 -80px;
+    }
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 48px;
+    left: 50%;
+    width: 150px;
+    height: 0;
+
+    border-bottom: 1px solid var(--Dark-Grayish-Violet);
+
+    transform: translateX(-50%);
+
+    @media screen and (min-width: 1280px) {
+      top: 100px;
+      left: $margin-left;
+
+      transform: translateX(0);
+    }
   }
 }
 
@@ -63,6 +126,13 @@
   align-items: center;
   justify-content: center;
   padding-top: 4rem;
+
+  @media screen and (min-width: 1280px) {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding-inline: 11vw 3.5vw;
+  }
 }
 
 .section {
@@ -71,6 +141,10 @@
   align-items: center;
   justify-content: center;
   padding-bottom: 3.2rem;
+
+  @media screen and (min-width: 1280px) {
+    align-items: flex-start;
+  }
 
   &__subtitle {
     margin-top: 2.25rem;
@@ -82,7 +156,6 @@
   }
 
   &__paragraph {
-    //margin-inline: auto;
     margin: 0;
     width: 86%;
     max-width: 600px;
@@ -100,7 +173,7 @@
   justify-content: space-between;
   gap: 2rem;
   width: 86%;
-  max-width: 600px;
+  max-width: 1112px;
   margin-inline: auto;
   margin-bottom: 9rem;
   padding-block: 4.7rem;
@@ -110,6 +183,16 @@
   background-image: url("../assets/images/bg-pattern-how-we-work-mobile.svg");
   background-repeat: no-repeat;
   background-position: top right;
+
+  @media screen and (min-width: 1280px) {
+    flex-direction: row;
+    justify-content: space-between;
+    padding-inline: 5rem;
+
+    text-align: left;
+
+    background-image: url("../assets/images/bg-pattern-how-we-work-desktop.svg");
+  }
 
   &__paragraph {
     margin: 0;
@@ -124,9 +207,15 @@
   &__link {
     @include buttonlink.buttonlink;
     margin-bottom: 0;
+    @media screen and (min-width: 1280px) {
+      &:hover {
+        background-color: white;
+        color: var(--Very-Dark-Violet);
+      }
+    }
   }
 }
 
 .big-margin {
-  margin-bottom: clamp(10rem, 49vw, 23.2rem);
+  margin-bottom: clamp(4rem, 22.3vw, 12.8rem);
 }
