fifth commit, script add

--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -11,6 +11,7 @@ html(lang="en")
     
     link(rel="stylesheet", href="css/normalize.css")
     link(rel="stylesheet", href="css/styles.css")
+    script(src="js/script.js" type="module") 
     title Insure Landing Page
   body.body
     include ../layout/header
